fix vertical scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,7 @@
 body {
   font-family: "Outfit", sans-serif;
 }
+html,
+body {
+  overflow-x: hidden;
+}
